--- a/index_firedanger.html
+++ b/index_firedanger.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Harvester Seasons</title>
+    <title>Arctic Firedanger</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
