--- a/index_firedanger.html
+++ b/index_firedanger.html
@@ -35,8 +35,8 @@
             </details>
         </header>
         <div id="titleB"></div>
-        <div id="labelsB"></div>
-        <div id="graphB"></div>
+        <!-- <div id="labelsB"></div>
+        <div id="graphB"></div> -->
         <div id="set-date">
             <!-- <div id="dynamic-control">
                 <label id="dynamic">
@@ -89,15 +89,46 @@
             <div id="opacity-value" style="width: 45px;">
                 <!-- <div id="opacity-value"> -->
             </div>
-            <div id="altcolors">
+            <!-- <div id="altcolors">
                 <input type="button" value="Alternative Colors" onclick="altcolors()">
-            </div>
+            </div> -->
         </div>
 
-        <div id="labels"></div>
-        <div id="graphsw"></div>
-        <div id="graphst"></div>
-        <div id="graphsh"></div>
+        <!-- <div id="labels" style="width: 90%; height: 20px;"></div>
+        <div id="graph_cems" style="width: 90%; height: 120px;"></div>
+        <div id="graph_duff" style="width: 90%; height: 120px;"></div>
+        <div id="graph_firebuildup" style="width: 90%; height: 120px;"></div>
+        <div id="graph_fireweather" style="width: 90%; height: 120px;"></div>
+        <div id="graph_fuelmoisture" style="width: 90%; height: 120px;"></div>
+        <div id="graph_firespread" style="width: 90%; height: 120px;"></div>
+        <div id="graph_fireseverity" style="width: 90%; height: 120px;"></div> -->
+
+        <!-- <div id="labels"></div>
+        <div id="graph_cems"></div>
+        <div id="graph_duff"></div>
+        <div id="graph_firebuildup"></div>
+        <div id="graph_fireweather"></div>
+        <div id="graph_fuelmoisture"></div>
+        <div id="graph_firespread"></div>
+        <div id="graph_fireseverity"></div> -->
+
+        <!-- <div id="labels"></div> -->
+         
+        <div id="labels_cems"></div>
+        <div id="graph_cems"></div>
+        <div id="labels_duff"></div>
+        <div id="graph_duff"></div>
+        <div id="labels_firebuildup"></div>
+        <div id="graph_firebuildup"></div>
+        <div id="labels_fireweather"></div>
+        <div id="graph_fireweather"></div>
+        <div id="labels_fuelmoisture"></div>
+        <div id="graph_fuelmoisture"></div>
+        <div id="labels_firespread"></div>
+        <div id="graph_firespread"></div>
+        <div id="labels_fireseverity"></div>
+        <div id="graph_fireseverity"></div>
+
         <!-- <div id="footer">
             <div style="float: left; width: 28%;">
                 <a href="https://harvesterseasons.com/">Harvester Seasons</a>
