--- a/index_firedanger.html
+++ b/index_firedanger.html
@@ -78,8 +78,12 @@
                 <li><span class="drysummerpeat"></span> Dry summer, peat soil</li>
                 <li><span class="winter"></span> Winter (BAD)</li>
             </ul>
+        </div>-->
+        <!-- <div id="ndmi-legend" class="legend">
+            <span class="ndmi"></span>
         </div> -->
-        <div id="set-opacity" style="padding-left: 15%; padding-top: 15px;">
+        <!-- <div id="set-opacity" style="padding-left: 15%; padding-top: 15px;"> -->
+        <div id="set-opacity">
             <div id="opacity">
                 Opacity:
             </div>
