--- a/index_firedanger_test.html
+++ b/index_firedanger_test.html
@@ -123,19 +123,19 @@
                 <tr>
                     <td>
                         <label id="cems">
-                            <input type="checkbox" id="checkbox_cems" onchange="change_cems()" checked>
+                            <input type="checkbox" id="checkbox_cems" onchange="change_cems()" unchecked>
                             CEMS Drought Code
                         </label>
                     </td>
                     <td>
                         <label id="duff">
-                            <input type="checkbox" id="checkbox_duff" onchange="change_duff()" checked>
+                            <input type="checkbox" id="checkbox_duff" onchange="change_duff()" unchecked>
                             Duff Moisture Code
                         </label>
                     </td>
                     <td>
                         <label id="firebuildup">
-                            <input type="checkbox" id="checkbox_firebuildup" onchange="change_firebuildup()" checked>
+                            <input type="checkbox" id="checkbox_firebuildup" onchange="change_firebuildup()" unchecked>
                             Fire Buildup Index
                         </label>
                     </td>
@@ -149,19 +149,19 @@
                 <tr>
                     <td>
                         <label id="fuelmoisture">
-                            <input type="checkbox" id="checkbox_fuelmoisture" onchange="change_fuelmoisture()" checked>
+                            <input type="checkbox" id="checkbox_fuelmoisture" onchange="change_fuelmoisture()" unchecked>
                             Fuel Moisture Code
                         </label>
                     </td>
                     <td>
                         <label id="firespread">
-                            <input type="checkbox" id="checkbox_firespread" onchange="change_firespread()" checked>
+                            <input type="checkbox" id="checkbox_firespread" onchange="change_firespread()" unchecked>
                             Fire Spread Index
                         </label>
                     </td>
                     <td>
                         <label id="fireseverity">
-                            <input type="checkbox" id="checkbox_fireseverity" onchange="change_fireseverity()" checked>
+                            <input type="checkbox" id="checkbox_fireseverity" onchange="change_fireseverity()" unchecked>
                             Fire Severity Index
                         </label>
                     </td>
