--- a/index_firedanger.html
+++ b/index_firedanger.html
@@ -208,7 +208,8 @@
     <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-9509467-58")</script>     -->
 
     <!-- <script type="text/javascript" src="js/leaflet.js"></script> -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet-src.js"></script>
+    <script type="text/javascript" src="js/leaflet-src.js"></script>
+    <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet-src.js"></script> -->
 
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.js"></script>
