Historical WMS-layers

--- a/index_firedanger.html
+++ b/index_firedanger.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- <div id="labels" style="width: 90%; height: 20px;"></div>
-        <div id="graph_cems" style="width: 90%; height: 120px;"></div>
+        <div id="graph_drought" style="width: 90%; height: 120px;"></div>
         <div id="graph_duff" style="width: 90%; height: 120px;"></div>
         <div id="graph_firebuildup" style="width: 90%; height: 120px;"></div>
         <div id="graph_fireweather" style="width: 90%; height: 120px;"></div>
@@ -115,7 +115,7 @@
         <div id="graph_fireseverity" style="width: 90%; height: 120px;"></div> -->
 
         <!-- <div id="labels"></div>
-        <div id="graph_cems"></div>
+        <div id="graph_drought"></div>
         <div id="graph_duff"></div>
         <div id="graph_firebuildup"></div>
         <div id="graph_fireweather"></div>
@@ -129,8 +129,8 @@
             <table class="timeseries-table">
                 <tr>
                     <td>
-                        <label id="cems">
-                            <input type="checkbox" id="checkbox_cems" onchange="change_cems()" checked>
+                        <label id="drought">
+                            <input type="checkbox" id="checkbox_drought" onchange="change_drought()" checked>
                             CEMS Drought Code
                         </label>
                     </td>
@@ -177,8 +177,8 @@
         
         </div> -->
         
-        <div id="labels_cems"></div>
-        <div id="graph_cems"></div>
+        <div id="labels_drought"></div>
+        <div id="graph_drought"></div>
         <div id="labels_duff"></div>
         <div id="graph_duff"></div>
         <div id="labels_firebuildup"></div>
